# dfe-api

./: .gitignore  Cargo.toml  LICENSE  README.md  build-release.bat  build.rs  cancelar_response.xml  flag_autorizacao.env  nfe_request.xml  nfe_request_envelope.xml  nfe_response.xml  version.json  xml_validation_error.xml
distribuicao-logs/errors/48510510000135/producao/2026/04/: 16-120132014.txt
distribuicao-logs/flag/: flag.json
src/: main.rs
src/common/: mod.rs
src/distribuicao/: mod.rs
src/distribuicao/handlers/: mod.rs
src/distribuicao/models/: mod.rs  requests.rs  responses.rs
src/distribuicao/services/: mod.rs
src/nfe/: entity.rs  mod.rs
src/nfe/cancelar/: mod.rs  structs.rs
src/nfe/dest/: mod.rs
src/nfe/det/: mod.rs  tag_cofins.rs  tag_ibs_cbs.rs  tag_icms.rs  tag_pis.rs  types.rs
src/nfe/pag/: mod.rs
src/nfe/tools/: mod.rs  structs.rs
src/nfe/total/: mod.rs
src/nfe/transp/: mod.rs
src/nfe/validation/: mod.rs
src/pdf/: mod.rs
src/pdf/handlers/: mod.rs
src/pdf/models/: mod.rs  requests.rs  responses.rs
src/pdf/services/: mod.rs
src/system/: mod.rs
src/tests/: mod.rs
