[package]
name = "dfe-api"
version = "0.1.8"
authors = ["Gustavo Ota<gustavo@gravis.com.br>"]
description = "DFe API REST para Documentos Fiscais Eletronicos"
license-file = "LICENSE.txt"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "dfe_api.exe"

[package.metadata.vcpkg]
triplet = "x64-windows-static"

[profile.release]
debug = false

[build-dependencies]
winres = "0.1"
winapi = { version = "0.3.9", features = ["winnt"] }


[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = "0.4.39"
dfe = "0.4.2"
rust_decimal = "1.37.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
